# quom

./: .gitignore  .travis.yml  LICENSE  README.md  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  testing.yml
example/: foobar.hpp  ruso.hpp
example/libfoobar/: bar.cpp  foo.cpp  foo.hpp  util.cpp
example/pragma_once/: abc.cpp  abc.hpp  base.cpp  base.hpp  call.cpp  call.hpp  def.cpp  def.hpp  ruso.hpp
examples/flat_structure/: README.md  foobar_gen.hpp
examples/flat_structure/libfoobar/: bar.hpp  base.cpp  base.hpp  foobar.hpp  util.hpp
examples/include_directory/: README.md
examples/include_directory/include/libfoobar/: bar.hpp  foo.hpp  foobar.hpp
quom/: __init__.py  __main__.py  quom.py
quom/tokenizer/: __init__.py  comment_tokenizer.py  identifier_tokenizer.py  iterator.py  number_tokenizer.py  preprocessor_tokenizer.py  quote_tokenizer.py  remaining_tokenizer.py  symbol_tokenizer.py  token.py  tokenize.py  tokenize_error.py  tokenizer.py  whitespace_tokenizer.py
quom/utils/: __init__.py  iterable.py
src/quom/: __init__.py  __main__.py  quom.py  quom_error.py
src/quom/tokenizer/: __init__.py  comment_tokenizer.py  number_tokenizer.py  preprocessor_tokenizer.py  quote_tokenizer.py  remaining_tokenizer.py  symbol_tokenizer.py  token.py  tokenize.py  whitespace_tokenizer.py
tests/: test_iterator.py  test_tokenizer.py
tests/test_quom/: same_file_different_include.py  test_file_encoding.py  test_file_without_include_guard.py  test_include_directory.py  test_last_source_file.py  test_line_breaks_when_stitching.py  test_normal.py  test_same_file_different_include.py  test_source_directory.py
